--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -13,7 +13,7 @@
     <a class="nav-link" href="{{site.url}}contact.html">Contact</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="{{site.url}}about.html"><img class="rounded-circle mr-2" alt="" src="{{site.url}}{{site.logo}}" width="30"><span class="align-middle">About</span></a>
+    <a class="nav-link" href="{{site.url}}about.html"><img class="rounded-circle mr-2" alt="Logo" src="{{site.url}}{{site.logo}}" width="30"><span class="align-middle">About</span></a>
 </li>
 <!-- <li class="nav-item dropdown">
 	<a class="nav-link" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
