--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -7,7 +7,7 @@
     <a class="nav-link" href="{{site.baseurl}}/categories.html">Categories</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="{{site.baseurl}}/web-concepts-library/">Post</a>
+    <a class="nav-link" href="{{site.baseurl}}/ocean/">Post</a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href="{{site.baseurl}}/contact.html">Contact</a>
