--- a/_includes/tracking-header.html
+++ b/_includes/tracking-header.html
@@ -1,1 +1,11 @@
 <!-- This goes before </head> closing tag, Google Analytics can be placed here --> 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RZ9TWBZ53X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RZ9TWBZ53X');
+</script>
